--- a/styling/style.css
+++ b/styling/style.css
@@ -1,13 +1,120 @@
-* {
+:root {
     --deep-purple: #920077;
     --bright-pink: #FDEEFA;
-};
+    --border-width: 5px;
+    --border-radius: 10px;
+    --horizontal-small-pad: 0.5rem;
+    --vertical-small-pad: 0.75rem;
+    --horizontal-big-pad: 1rem;
+    --vertical-big-pad: 1.25rem;
+}
 
-html, body {
+body {
     background-color: black;
     font-family: "Geologica", sans-serif;
-    font-optical-sizing: auto;
     font-style: normal;
     color: white;
     font-variation-settings: "wght" 400;
-};
+}
+
+p, h1, h2, h3, h4 {
+    padding: 0px;
+    margin: 0px;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+}
+
+h3 {
+    font-size: 1.3rem
+}
+
+p, label {
+    font-size: 1rem;
+}
+
+.half {
+    width: 50%;
+}
+
+.full {
+    width: 100%;
+}
+
+.column-flex {
+    display: flex;
+    flex-direction: row;
+}
+
+.grayed {
+    color: rgb(124, 124, 124);
+}
+
+.white {
+    color: white;
+}
+
+.main-gradient {
+    background: var(--deep-purple);
+    background: linear-gradient(30deg, var(--deep-purple) 90%, var(--bright-pink) 100%);
+    background-color: white;
+    min-height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: var(--border-radius);
+}
+
+.inner-main-gradient {
+    background-color: black;
+    width: calc(100% - var(--border-width));
+    height: calc(100% - var(--border-width));
+    border-radius: var(--border-radius);
+}
+
+.main-border {
+    border-radius: var(--border-radius);
+    border: var(--deep-purple) 1px solid;
+}
+
+.instruments-container {
+    padding: 0px 0.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1rem;
+    row-gap: 1rem;
+}
+
+.instrument {
+    padding: var(--horizontal-small-pad) var(--vertical-small-pad);
+    padding-bottom: var(--vertical-big-pad);
+}
+
+.envelope-container {
+    margin-top: var(--vertical-small-pad);
+    padding: var(--vertical-small-pad) var(--vertical-small-pad);
+}
+
+.envelope-box {
+    min-height: 100px;
+    border-color: white;
+    padding: var(--horizontal-small-pad) var(--vertical-small-pad);
+}
+
+.inner-device-controls-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-top: var(--vertical-small-pad);
+}
+
+.inner-device-controls-grid-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 3rem;
+}
